# ParallelCG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: README.md
benchmark/CUDA/multi-gpu/: CUDA_MPI_impl.cu  main.cpp  run.sh
benchmark/CUDA/single-gpu/: CUBLAS_single.cu  run.sh
benchmark/IO/: parallel_io.cpp  run.sh  serial_io.cpp
benchmark/MPI/distributed-matrix/: distributed.cpp  main.cpp
benchmark/MPI_1Node/: cg_bench_mpi_strong.txt  cg_bench_mpi_weak.txt  plot_strong_scaling_mpi.py  plot_weak_scaling_mpi.py
benchmark/MPI_distributed_matrix/: run.sh
benchmark/OpenMP/: cg_bench_omp_blas_fixM.sh  cg_bench_omp_blas_fixM.txt  cg_timed_omp.cpp  plot_strong_scaling_omp_and_blas.py
benchmark/SpeedupTemplates/: CMakeLists.txt  benchmark_template.hpp  mpi_benchmark.cpp  mpi_distributed_benchmark.cpp  mpi_openmp_combinations.sh  opencl_benchmark.cpp  openmp_benchmark.cpp  openmp_cobinations.sh  plot_speedup.py  sequential_benchmark.cpp
challenge/: CMakeLists.txt
challenge/include/cg/: cgcore.hpp
challenge/src/cgcore/: CGSolver.hpp
challenge/src/cgcore/strategy/: CGStrategy.hpp  Sequential.hpp
challenge/src/cgcore/strategy/CUDA/: CUBLAS_CG.cu  CUBLAS_CG.hpp  CUDA_MPI.cu  CUDA_MPI.hpp
challenge/src/cgcore/strategy/MPI/: MPI_CG.cpp  MPI_CG.hpp  MPI_DISTRIBUTED.cpp  MPI_DISTRIBUTED.hpp
challenge/src/cgcore/strategy/MPI_OpenMP/: MPI_OpenMP_CG.cpp  MPI_OpenMP_CG.hpp
challenge/src/cgcore/strategy/openCL/: OpenCL.cpp  OpenCL.hpp  OpenCLUtils.cpp  OpenCLUtils.hpp  OpenCL_CG.cpp  OpenCL_CG.hpp  kernels.cl
challenge/src/cgcore/strategy/openMP/: OpenMP_CG.cpp  OpenMP_CG.hpp
challenge/src/cgcore/strategy/openMP_BLAS/: OpenMP_BLAS_CG.cpp  OpenMP_BLAS_CG.hpp
challenge/src/cgcore/strategy/sequential/: Sequential.cpp  Sequential.hpp  Sequential_CG.cpp  Sequential_CG.hpp
challenge/src/cgcore/timer/: Timer.cpp  Timer.hpp
challenge/src/cgcore/utils/: utils.cpp  utils.hpp
io/: banchmark_sequential.txt  banchmark_ss_openmp.txt  banchmark_su_mp_128.txt  banchmark_su_mpi.txt  banchmark_su_mpi_256threads.txt  banchmark_su_opencl_cpu.txt  banchmark_su_opencl_gpu.txt  banchmark_su_openmp.txt  mat80.mtx  temp.txt
sandbox/Daniele/distributed_memory/: CMakeLists.txt  test.cpp  utils.cpp  utils.hpp
sandbox/Ekki/conjugate_gradients-main/: cg_bench_mpi_fixM.sh  cg_bench_mpi_fixM.txt  cg_bench_mpi_omp_20000.txt  cg_bench_mpi_omp_fixM.sh  cg_bench_mpi_omp_fixM.txt  cg_bench_omp.sh  cg_bench_ompV1_fixM.txt  cg_bench_omp_16threads.txt  cg_bench_omp_20000_icpx.txt  cg_bench_omp_32threads.txt  cg_bench_omp_fixM.sh  cg_bench_omp_fixM.txt  cg_bench_omp_fixM_gpp_t1-16-2.txt  cg_bench_omp_fixM_gpp_t1-16.txt  cg_bench_omp_fixM_icpx.txt  cg_bench_serial.sh  cg_bench_serial.txt  cg_mpi_omp  cg_mpi_omp_blas  cg_omp_blas  cg_timed_mpi  cg_timed_omp  cg_timed_ompV02  cg_timed_ompV1  conjugate_gradients  conjugate_gradients_timed  plot_txt_file.py
sandbox/Ekki/conjugate_gradients-main/io/: temp.txt
sandbox/Ekki/conjugate_gradients-main/plotting/: plot_strong_scaling.py  plot_strong_scaling_mpi.py  plot_strong_scaling_omp.py  plot_weak_scaling.py  plot_weak_scaling_mpi.py
sandbox/Ekki/conjugate_gradients-main/plotting/gpu_and_io/: ferra2.py  plop_io2.py  plot_single_gpu.py  plot_strong_scaling_gpu.py  plot_weak_scaling_gpu.py
sandbox/Ekki/conjugate_gradients-main/plotting/matrix_scaling/: mpi_256.txt  opencl_cpu.txt  opencl_gpu.txt  plot_su.py
sandbox/Ekki/conjugate_gradients-main/src/: cg_mpi_omp.cpp  cg_mpi_omp_blas.cpp  cg_omp_blas.cpp  cg_timed_mpi.cpp  cg_timed_omp.cpp  cg_timed_ompV01.cpp  cg_timed_ompV02.cpp
sandbox/Ekki/conjugate_gradients-main/src/old_stuff/: conjugate_gradients_omp.cpp
sandbox/Ekki/conjugate_gradients-main/toy_problems/: toy_job_Meluxina.sh  toy_mpi  toy_mpi.cpp  toy_mpi.sh  toy_omp.cpp  toy_sum_omp
sandbox/Ekki/conjugate_gradients-main/txt_folder/: cg_bench_omp_4threads.txt  cg_bench_omp_8threads.txt  cg_bench_omp_fixM_1-64_g++.txt  useful_info.txt
sandbox/Luca/: cuda_kernels.cu  cuda_kernels.cuh  gpu_tests.cpp  gpu_tests.hpp  vec_sum.cu  vec_sum.cuh
sandbox/Luca/experiments/: cuda_kernels.cu  cuda_kernels.cuh  gpu_tests.cpp  gpu_tests.hpp
sandbox/Luca/experiments/cuda_mpi/: main.cpp
sandbox/Luca/experiments/nccl/: main.cpp
sandbox/Luca/src/single_gpu/: CUBLAS_single.cu  CudaSingleGPU.cpp  single_gpu_header.hpp  single_gpu_impl.cu  single_gpu_kernels.cuh
test/: CMakeLists.txt  cuda.cpp  cuda_mpi.cpp  main.cpp  micro_benchmark_opencl.cpp  mpi.cpp  mpi_matrix_distr.cpp  mpi_openmp.cpp  opencl.cpp  openmp.cpp  openmp_blas.cpp  sequential.cpp  test_template.hpp
